# BlueFace

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/gui/: gui_window.cpp  gui_window.h
src/image/: blur_faces.cpp  blur_faces.h  face_detection.cpp  face_detection.h  file_utils.cpp  file_utils.h  types.h
src/types/: types.h
